tests/baselines/reference/plainJSReservedStrict.errors.txt
tests/cases/conformance/salsa/plainJSReservedStrict.js(2,7): error TS1100: Invalid use of 'eval' in strict mode.
tests/cases/conformance/salsa/plainJSReservedStrict.js(2,7): error TS2451: Cannot redeclare block-scoped variable 'eval'.
tests/cases/conformance/salsa/plainJSReservedStrict.js(3,7): error TS1100: Invalid use of 'arguments' in strict mode.


==== tests/cases/conformance/salsa/plainJSReservedStrict.js (3 errors) ====
    "use strict"
    const eval = 1
          ~~~~
!!! error TS1100: Invalid use of 'eval' in strict mode.
          ~~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'eval'.
!!! related TS6203 /.ts/lib.es5.d.ts:32:18: 'eval' was also declared here.
    const arguments = 2
          ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
    